# SimpleCardGame/WebApp/config/swagger.json
@@ -3,7 +3,7 @@
     "info": {
         "version": "v1",
         "title": "Simple Gates Game API",
-        "description": "A simple single-instance representation of memory (Concentration)."
+        "description": "A simple representation of Simple Gates Game."
     },
     "schemes": [
         "http",
@@ -85,20 +85,39 @@
                 ],
                 "parameters": [
                     {
-                        "name": "card",
+                        "name": "player_id",
                         "in": "query",
                         "required": true,
-                        "type": "integer",
-                        "format": "int32"
+                        "type": "string"
+                    },
+                    {
+                        "name": "card_index",
+                        "in": "query",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "qubit_index",
+                        "in": "query",
+                        "required": true,
+                        "type": "string"
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/CardPlay"
+                            "type": "object",
+                            "properties": {
+                                "player_id": {
+                                    "type": "string"
+                                },
+                                "qubits": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/definitions/Qubit"
+                                    }
+                                }
                             }
                         }
                     }
@@ -133,7 +152,7 @@
                         "required": false,
                         "type": "array",
                         "items": {
-                            "$ref": "#/definitions/CardType"
+                            "type": "string"
                         }
                     }
                 ],
@@ -161,11 +180,11 @@
         "CardPlay": {
             "type": "object",
             "properties": {
-                "id": {
+                "card_index": {
                     "format": "int32",
                     "type": "integer"
                 },
-                "value": {
+                "qubit_index": {
                     "format": "int32",
                     "type": "integer"
                 }
@@ -198,7 +217,11 @@
         "Qubit": {
             "type": "object",
             "properties": {
-                "value": {
+                "value1": {
+                    "type": "integer",
+                    "format": "int32"
+                },
+                "value2": {
                     "type": "integer",
                     "format": "int32"
                 }
